# DoxyDemo

./: CMakeLists.txt
HaedsConfig/: CMakeLists.txt
HaedsConfig/include/: IniParser.h
HaedsConfig/src/: IniParser.cpp
data/: config.ini
